yv-1540 make long note moment content scrollable and maintain/display line breaks for entered note content

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -633,7 +633,8 @@ body.transition .moment
   border-bottom: 0
   font-size: 13px
   max-height: 230px
-  overflow: hidden
+  overflow-x: hidden
+  overflow-y: scroll
 
 .moment-no-note.detail-view
   max-height: none
