--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -3,7 +3,7 @@
 - content_for :sidebar do
   = render partial: "moments/activity_sidebar", locals: {moment: @moment}
 
-%article.social-detail{"data-moment-id" => @moment.id}
+%article.social-detail{"data-moment-id" => @moment.id, "data-interact-with" => current_user.present? ? current_user.interact_with?(@moment).to_s : "false"}
   :javascript
     $(document).ready(function(){
       var feed = new Moments.DetailView();
