Start reading plan button

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -869,7 +869,9 @@ input[type="submit"].moment-fr-name-add
     border: 1px solid #e1e1e1
     border-bottom: 0
     position: relative
-
+    .moment-rp-start
+      font-weight: bold
+      margin-top: 10px
     a
       font-weight: normal
       color: #444
