--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -1,4 +1,4 @@
-- @title = @moment.moment_title
+- @title = strip_tags @moment.moment_title
 
 - content_for :sidebar do
   = render partial: "moments/activity_sidebar", locals: {moment: @moment}
