Left aligned start plan button

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -825,7 +825,7 @@ body.transition .moment
     .moment-rp-start
       width: 18%
       font-weight: bold
-      margin: 10px auto 0px
+      margin: 10px 0 0
     a
       font-weight: normal
       color: #444
