--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -37,6 +37,8 @@
 #load-more.dark
   background-color: #eee
 
+#spinner
+  margin: 134px 189px 300px
 
 // !Moment containers
 body.transition .moment
