--- a/app/views/moments/index.html.haml
+++ b/app/views/moments/index.html.haml
@@ -1,5 +1,5 @@
 - @sidebar = false
-
+#spinner
 .social-feed-wrap{"data-str-load-more" => t("moments.action.load more")}
   :javascript
     $(document).ready(function(){
