--- a/app/views/highlights/show.html.haml
+++ b/app/views/highlights/show.html.haml
@@ -2,7 +2,7 @@
 
 - content_for :sidebar do
   = render partial: "moments/activity_sidebar", locals: {moment: @moment}
-
+#spinner
 %article.social-detail{"data-moment-id" => @moment.id}
   :javascript
     $(document).ready(function(){
