update notes references to use @references in note.js.coffee

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -426,6 +426,9 @@ body.transition .moment
       color: #444
       display: block
 
+    a.reference-link
+      display: inline
+
       b
         color: #0084c8
         font-weight: normal
