--- a/app/assets/stylesheets/_ui_elements.sass
+++ b/app/assets/stylesheets/_ui_elements.sass
@@ -463,7 +463,7 @@ dd .icon_settings
 
 .cal_month td.read
   font-weight: bold
-  background: image-url("cal_check.png") no-repeat right top
+  background: image-url("cal_check.png") no-repeat center 23px
 
 .cal_month td.read a
   color: #888
@@ -477,7 +477,7 @@ dd .icon_settings
   height: 24px
 
 .cal_month .active-day a
-  background: image-url("cal_bullet.png") center 21px no-repeat
+  background: image-url("cal_bullet.png") center 23px no-repeat
 
 .cal_month .hidden
   height: 35px
