Terry asked me to update the green buttons to match native apps, so that's what I did.

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -113,7 +113,7 @@
 
     li a
       font-weight: bold
-      color: #48A900
+      color: #6AB750
 
   .left_column
     float: left
@@ -125,7 +125,7 @@
 
 #mobile_downloads
   a.cta
-    background: #48A900 image-url("mobile_download.png") no-repeat 15px center
+    background: #6AB750 image-url("mobile_download.png") no-repeat 15px center
     background-size: 54px 51px
     display: block
     padding: 18px 15px 15px 80px
