--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -436,7 +436,7 @@
   .verse-actions-success-message
     display: block
     background:
-      color: #48a900
+      color: #6AB750
     color: #fff
     margin: 0
     padding: 8px 15px
