--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -398,21 +398,19 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 input[type="submit"]
-  background-color: #48A900
+  background-color: #6AB750
   +background-image(none)
   width: 100%
   padding: 10px 0
   color: #fff
-  text-shadow: rgba(0,0,0,0.3) 0 -1px 0
   font-size: 15px
   +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0)
   border: none
 
 input[type="submit"]:hover
-  background-color: #48A900
+  background-color: #6AB750
   +background-image(none)
   color: #fff
-  text-shadow: rgba(0,0,0,0.3) 0 -1px 0
   +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0)
   border: none
 
@@ -422,7 +420,7 @@ input[type="submit"]:hover
 input[type="submit"].action_button_green,
 button.action_button_green,
 .action_button_green
-  background-color: #48A900
+  background-color: #6AB750
   background-image: none
 
 .action_button_green:hover,
@@ -558,7 +556,7 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 .sm_action_button_green
-  background-color: #48A900
+  background-color: #6AB750
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
