--- a/app/assets/stylesheets/mobile/_users.sass
+++ b/app/assets/stylesheets/mobile/_users.sass
@@ -449,7 +449,7 @@ article.profile
   text-align: center
   padding: 7px 10px
   +box-shadow(inset rgba(0,0,0, 0.20) 0 -2px 0 0)
-  background-color: #48A900
+  background-color: #6AB750
   border: none
   width: auto
   height: auto
