--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -392,7 +392,7 @@ input[type="submit"].action_button_green,
 input[type="button"].action_button_green,
 button.action_button_green,
 .action_button_green
-  background-color: #48A900
+  background-color: #6AB750
   color: #fff
 
 input[type="submit"].action_button_green:hover,
@@ -524,7 +524,7 @@ button.action_button_grey:active,
 // Small green action buttons
 
 .sm_action_button_green
-  background-color: #48A900
+  background-color: #6AB750
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus
