--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -120,7 +120,7 @@ body, html
         margin-bottom: 20px
 
       .cta
-        background: #48a900
+        background: #6AB750
         color: #fff
         font-weight: bold
         font-size: 15px
@@ -128,7 +128,7 @@ body, html
         text-decoration: none
         padding: 4px 14px 6px
         border-radius: 4px
-        box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
+        box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.2)
         width: 100%
         margin: 0 auto
 
@@ -326,7 +326,7 @@ body, html
         input[type="submit"]
           width: 100%
           margin: 10px 0 0 0
-          background: #48a900
+          background: #6AB750
           color: #fff
           font-weight: bold
           font-size: 15px
@@ -334,7 +334,7 @@ body, html
           text-decoration: none
           padding: 7px 0 8px
           border-radius: 4px
-          box-shadow: inset 0px -1px 0px rgba(99, 122, 68, 1)
+          box-shadow: inset 0px -2px 0px rgba(99, 122, 68, 1)
           text-shadow: none
           border: 0
 
@@ -406,7 +406,7 @@ body, html
         padding: 0
 
     a
-      background: #48a900
+      background: #6AB750
       display: block
       color: #fff
       font-weight: bold
@@ -414,7 +414,7 @@ body, html
       text-align: center
       text-decoration: none
       border-radius: 5px
-      box-shadow: inset 0 -1px 0 rgba(#000, 0.3)
+      box-shadow: inset 0 -2px 0 rgba(#000, 0.2)
       margin: 0px 0 10px
       width: 100%
       padding: 5px 0px
@@ -524,7 +524,7 @@ body, html
         width: 340px
 
       .cta
-        background: #48a900
+        background: #6AB750
         color: #fff
         font-weight: bold
         font-size: 15px
@@ -532,7 +532,7 @@ body, html
         text-decoration: none
         padding: 4px 14px 6px
         border-radius: 4px
-        box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.3)
+        box-shadow: inset 0px -2px 0px rgba(0, 0, 0, 0.2)
 
       .cta:hover
         background: #3787d6
@@ -728,7 +728,7 @@ body, html
         padding: 0
 
     a
-      background: #48a900
+      background: #6AB750
       display: block
       color: #fff
       font-weight: bold
@@ -737,7 +737,7 @@ body, html
       text-decoration: none
       padding: 5px 15px
       border-radius: 5px
-      box-shadow: inset 0 -1px 0 rgba(#000, 0.3)
+      box-shadow: inset 0 -2px 0 rgba(#000, 0.2)
       margin-top: 80px
 
     h2
