--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -1,5 +1,17 @@
 - @title = @plan.title.dup if @plan.present? && @plan.title.present?
+- @meta_url = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
 
+- content_for :additional_meta do
+
+  %meta{name: "og:title",       content: @title }
+  %meta{name: "og:url",         content: @meta_url}
+  %meta{name: "og:description", content: @plan.about }
+  %meta{name: "twitter:card",             content: "summary"}
+  %meta{name: "twitter:url",              content: @meta_url}
+  %meta{name: "twitter:title" ,           content: @title}
+  %meta{name: "twitter:description",      content: @plan.about}
+  %meta{name: "twitter:image",            content: "#{url_for(asset_path('Bible-app-icon-english-144x144.png'))}"}
+  %meta{name: "twitter:site",             content: "@YouVersion"}
 
 %article.reading_plan_index
   %h1.keep= @plan.name
