--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -1,17 +1,21 @@
 :ruby
-  meta_title        = t("meta.mobile.title")
-  meta_description  = t("meta.mobile.description")
-  meta_url          = "http://bible.com/app"
-
   @sidebar          = false
-  @title            = meta_title
-  @meta_description = meta_description
+  @title            = t("meta.mobile.title")
+  @meta_description = t("meta.mobile.description")
+  @meta_url          = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
 
 - content_for :additional_meta do
-  %meta{name: "url",            content: meta_url}
-  %meta{name: "og:title",       content: meta_title }
-  %meta{name: "og:url",         content: meta_url }
-  %meta{name: "og:description", content: meta_description }
+
+  %meta{name: "url",            content: @meta_url}
+  %meta{name: "og:title",       content: @title }
+  %meta{name: "og:url",         content: @meta_url }
+  %meta{name: "og:description", content: @meta_description }
+  %meta{name: "twitter:card",             content: "summary"}
+  %meta{name: "twitter:url",              content: "#{request.protocol}#{request.host_with_port}#{request.fullpath}"}
+  %meta{name: "twitter:title" ,           content: @title}
+  %meta{name: "twitter:description",      content: @meta_description}
+  %meta{name: "twitter:image",            content: "#{url_for(asset_path('Bible-app-icon-english-144x144.png'))}"}
+  %meta{name: "twitter:site",             content: "@YouVersion"}
 
 %article.mobileapps
   %section#mobile_content
