--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,3 +1,8 @@
+:ruby
+  @title            = t("meta.mobile.title")
+  @meta_description = t("meta.mobile.description")
+  @meta_url          = "#{request.protocol}#{request.host_with_port}#{request.fullpath}"
+
 - @main_nav = false
 - @sidebar = false
 
@@ -11,6 +16,19 @@
   = javascript_include_tag '//use.typekit.net/mgk8ovf.js'
   :javascript
     try{Typekit.load();}catch(e){}
+
+- content_for :additional_meta do
+
+  %meta{name: "url",            content: @meta_url}
+  %meta{name: "og:title",       content: @title }
+  %meta{name: "og:url",         content: @meta_url }
+  %meta{name: "og:description", content: @meta_description }
+  %meta{name: "twitter:card",             content: "summary"}
+  %meta{name: "twitter:url",              content: "#{request.protocol}#{request.host_with_port}#{request.fullpath}"}
+  %meta{name: "twitter:title" ,           content: @title}
+  %meta{name: "twitter:description",      content: @meta_description}
+  %meta{name: "twitter:image",            content: "#{url_for(asset_path('Bible-app-icon-english-144x144.png'))}"}
+  %meta{name: "twitter:site",             content: "@YouVersion"}
 
 = cache "bdc_welcome_#{I18n.locale}", expires_in: YV::Caching.a_short_time do
   %article
