--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -9,8 +9,8 @@
   %link{rel: "shortcut icon", href:"/favicon.ico"}
   %meta{:charset => 'utf-8'}
   %meta{'http-equiv' => 'x-ua-compatible', :content => 'ie=edge, chrome=1'}
-  %meta{property: "og:image", content: "#{url_for(asset_path('app-icon-english-512x512.png'))}"}
-  %meta{name: 'Description', content: @meta_description || @site.description}
+  %meta{property: "og:image", content: "#{url_for(asset_path('Bible-app-icon-english-144x144.png'))}"}
+  %meta{name: 'Description', content: @meta_description || t("meta.site.description")}
   %meta{name: "HandheldFriendly", content: "True"}
   %meta{name: "MobileOptimized", content: "320"}
   %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, user-scalable=no"}
