Added variables stylesheet and add button colors

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -1,3 +1,6 @@
+@import "variables.sass"
+
+
 // ------------------About page
 
 .b-logo
@@ -113,7 +116,7 @@
 
     li a
       font-weight: bold
-      color: #6AB750
+      color: $green
 
   .left_column
     float: left
@@ -125,7 +128,7 @@
 
 #mobile_downloads
   a.cta
-    background: #6AB750 image-url("mobile_download.png") no-repeat 15px center
+    background: $green image-url("mobile_download.png") no-repeat 15px center
     background-size: 54px 51px
     display: block
     padding: 18px 15px 15px 80px
