--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,3 +1,5 @@
+@import "variables.sass"
+
 body, html
   width: 100%
 
@@ -120,7 +122,7 @@ body, html
         margin-bottom: 20px
 
       .cta
-        background: #6AB750
+        background: $green
         color: #fff
         font-weight: bold
         font-size: 15px
@@ -326,7 +328,7 @@ body, html
         input[type="submit"]
           width: 100%
           margin: 10px 0 0 0
-          background: #6AB750
+          background: $green
           color: #fff
           font-weight: bold
           font-size: 15px
@@ -406,7 +408,7 @@ body, html
         padding: 0
 
     a
-      background: #6AB750
+      background: $green
       display: block
       color: #fff
       font-weight: bold
@@ -524,7 +526,7 @@ body, html
         width: 340px
 
       .cta
-        background: #6AB750
+        background: $green
         color: #fff
         font-weight: bold
         font-size: 15px
@@ -728,7 +730,7 @@ body, html
         padding: 0
 
     a
-      background: #6AB750
+      background: $green
       display: block
       color: #fff
       font-weight: bold
