--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -1,3 +1,5 @@
+@import "variables.sass"
+
 br + input,
 br + select,
 br + textarea
@@ -398,7 +400,7 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 input[type="submit"]
-  background-color: #6AB750
+  background-color: $green
   +background-image(none)
   width: 100%
   padding: 10px 0
@@ -408,7 +410,7 @@ input[type="submit"]
   border: none
 
 input[type="submit"]:hover
-  background-color: #6AB750
+  background-color: $green
   +background-image(none)
   color: #fff
   +box-shadow(inset rgba(0,0,0,0.2) 0 -3px 0)
@@ -420,7 +422,7 @@ input[type="submit"]:hover
 input[type="submit"].action_button_green,
 button.action_button_green,
 .action_button_green
-  background-color: #6AB750
+  background-color: $green
   background-image: none
 
 .action_button_green:hover,
@@ -451,7 +453,7 @@ input[type="submit"].action_button_blue,
 input[type="button"].action_button_blue,
 .action_button_blue,
 a.action_button_blue
-  background-color: #0099CC
+  background-color: $blue
   border: 0
 
 input[type="submit"].action_button_blue:hover,
@@ -481,7 +483,7 @@ input[type="submit"].action_button_red,
 button.action_button_red,
 a.action_button_red,
 .action_button_red
-  background-color: #CC0000
+  background-color: $red
   background-image: none
   border: 0
 
@@ -556,7 +558,7 @@ input[type="submit"].action_button_grey,
   text-decoration: none
 
 .sm_action_button_green
-  background-color: #6AB750
+  background-color: $green
 
 .sm_action_button_green:hover,
 .sm_action_button_green:focus,
@@ -564,7 +566,7 @@ input[type="submit"].action_button_grey,
   background-color: #4FBA00
 
 .sm_action_button_blue
-  background-color: #0099CC
+  background-color: $blue
 
 .sm_action_button_blue:hover,
 .sm_action_button_blue:focus,
