--- a/app/assets/stylesheets/mobile/_text.sass
+++ b/app/assets/stylesheets/mobile/_text.sass
@@ -1,3 +1,5 @@
+@import "variables.sass"
+
 // !Basic HTML
 //----------------------------------------------------------------------------------------------------
 
@@ -35,7 +37,7 @@ h4
 
 
 .wordsofchrist
-  color: #cc0000
+  color: $red
 
 #main article p
   font-size: 15px
