Fixed repeating bible app icon on the home page

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -6,7 +6,7 @@ body, html
 
 // !Mobile styles
 
-@media only screen and (max-device-width: 320px)
+@media only screen and (max-width: 320px)
 
   #hero
     min-height: auto
@@ -19,11 +19,6 @@ body, html
 
   .bottom_cta .mobile_platforms
     margin-top: 2em
-
-
-@media only screen and (min-width: 481px)
-  #main article .bottom_cta div:first-child p
-    background: transparent
 
 
 @media only screen and (max-width: 990px)
@@ -110,7 +105,7 @@ body, html
       padding: 0 0 10px
 
       h1
-        font: 33px RobotoLight, Arial, sans-serif
+        font: 33px "proxima-nova", Arial, sans-serif
         letter-spacing: -0.05em
         margin: 20px 0
 
@@ -793,27 +788,27 @@ body, html
       background: image-url("bdc_mobile_icons@2x.png") no-repeat 0 0
       background-size: 260px 40px
 
-  #hero
-    background: #fff image-url("laptop@2x.jpg") no-repeat 500px 30px
-    background-size: 445px 223px
+    #hero
+      background: #fff image-url("laptop@2x.jpg") no-repeat 500px 30px
+      background-size: 445px 223px
 
-  #main article
-    ul
-      li.read_bible
-        background: image-url("read_bible_icon@2x.png") no-repeat center 0px
-        background-size: 188px 218px
+    #main article
+      ul
+        li.read_bible
+          background: image-url("read_bible_icon@2x.png") no-repeat center 0px
+          background-size: 188px 218px
 
-      li.study_bible
-        background: image-url("highlight_bible_icon@2x.png") no-repeat center 0px
-        background-size: 188px 218px
+        li.study_bible
+          background: image-url("highlight_bible_icon@2x.png") no-repeat center 0px
+          background-size: 188px 218px
 
-      li.subscribe_bible
-        background: image-url("subscribe_bible_icon@2x.png") no-repeat center 0px
-        background-size: 188px 218px
+        li.subscribe_bible
+          background: image-url("subscribe_bible_icon@2x.png") no-repeat center 0px
+          background-size: 188px 218px
 
-      .take_bible
-        background: image-url("take_bible_icon@2x.png") no-repeat center 0px
-        background-size: 188px 218px
+        .take_bible
+          background: image-url("take_bible_icon@2x.png") no-repeat center 0px
+          background-size: 188px 218px
 
 
 // !Drop Typekit support for some languages
