--- a/app/views/users/_mobile_menu.html.haml
+++ b/app/views/users/_mobile_menu.html.haml
@@ -14,7 +14,9 @@
     # removed for 3.1 Social launch - will make a comeback
     # connections: {path: "/settings/connections", string: t('users.edit connections')},
     devices: {path: "/settings/devices", string: t('users.edit devices')},
-    account: {path: "/settings/delete_account", string: t('users.edit account_existence')}
+    account: {path: "/settings/delete_account", string: t('users.edit account_existence')},
+    vod_subscriptions: {path: "/settings/vod_subscriptions", string: t('users.vod_subscriptions')}
+
   }
 
 
