--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -176,7 +176,7 @@
 
     a:hover,
     a.selected
-      background-color: rgba(#fff, 0.4)
+      background-color: rgba(#000, 0.2)
 
     p
       padding: 0
