Card style changes

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -608,26 +608,28 @@ body.transition .moment
   height: 175px
   width: 415px
   background-color: #eeedeb
-  padding-left: 5px
-  padding-top: 5px
+  padding-left: 10px
+  padding-top: 10px
   +border-radius(2px)
   select
     background-image: url(/assets/select_arrows.png)  
   h4
     margin-bottom: 5px
   .version
-    margin-top: 0px
+    margin-top: 10px
   h5, select   
     display: inline
-
+  .time
+    margin-top: 3px
+    margin-left: 18px
   .time, .subscribe
     margin-top: 5px
 
   .subscribe
-    margin-left: 50px
+    margin-left: 60px
 
   #version_id
-    width: 405px
+    width: 340px
   .or
     margin: 0 5px
 
